# ctb-lancamentos_cln

./: .gitignore  __init__.py  main.py  models.py  pyproject.toml
config/: __init__.py  settings.py
controllers/: __init__.py  lancamento_controller.py
docs/: ARQUITETURA.md  CLAUDE.md  Json pac.txt  README.md  REGRAS_PROJETO.md  documentacao_lancamento_cln.md  documentacao_lancamento_golive.md
prompts/: prompt_1a_ia.txt  prompt_2a_ia.txt  prompt_3a_equatorial_ia.txt
services/: __init__.py  business_rules.py  etl_service.py  http_client.py  ia_service.py  integra_bpms_service.py  integra_megaintegrador_service.py  notification_service.py  power_flow.py
tests/: test_business_rules.py  test_formatter.py  test_parallel.py  test_pipeline.py  test_validators.py
utils/: __init__.py  formatter.py  logger.py  validators.py
