[project]
name = "lancamento-cln"
version = "1.4.0"
description = "Motor ETL de lancamento de recebimentos CLN no Mega ERP (reescrita Python do fluxo Power Automate LancamentoCLN_GoLive)."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "requests>=2.31",
    "python-dateutil>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
lancamento-cln = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
